--- a/style1.css
+++ b/style1.css
@@ -63,7 +63,7 @@ h1 {
 body {
     min-height: 100vh;
     font-size: 18px;
-    font-family: Arial, sans-serif;
+    /*font-family: Arial, sans-serif;*/
 }
 
 li {
