--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ a {
     background-attachment: fixed;
     color: #e6ecc5;
     background-position-x: 50%;
-    background-color: #2c6e49;
+    background-color: #111111;
 }
 
 .header-gix7t {
