--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ a {
     background-attachment: fixed;
     color: #e6ecc5;
     background-position-x: 50%;
-    background-color: #111111;
+    background-color: #222222;
 }
 
 .header-gix7t {
@@ -162,7 +162,7 @@ a {
 .bold-an72e {
     font-size: 24px;
     box-shadow: 0 0 0 0 #000000;
-    color: #2c6e49;
+    color: #222222;
 }
 
 .heading3-axct7 {
