--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ a {
 .wave {
   animation-name: wave-animation;  
   animation-duration: 2s;        
-  animation-iteration-count: infinite; 
+  animation-iteration-count: 4; 
   transform-origin: 70% 70%;
   display: inline-block;
 }
