--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@
     padding-left: 24px;
     margin-bottom: 0px;
     color: #e6ecc5;
-    background-color: #ffc9b9;
+    background-color: #f2b2ca;
     border-width: 3px;
     border-style: none;
-    box-shadow: 8px 8px 0 0px #d68c45;
+    box-shadow: 8px 8px 0 0px #bbb809;
 }
 
 
