--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ a {
     background-attachment: fixed;
     color: #e6ecc5;
     background-position-x: 50%;
-    background-color: #E6EBFF;
+    background-color: #222222;
 }
 
 .header-gix7t {
