--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ a {
 .bold-an72e {
     font-size: 18px;
     box-shadow: 0 0 0 0 #000000;
-    color: #f0f1b0;
+    color: #EDD5EB;
 }
 
 .heading3-axct7 {
